--- a/views/admin/products.pug
+++ b/views/admin/products.pug
@@ -20,6 +20,7 @@ block content
               a.btn(href="/admin/edit-product/" + product._id.toString() + "?edit=true") Edit
               form(action="/admin/delete-product", method="POST")
                 input(type="hidden", name="productId", value=product._id)
+                input(type="hidden", name="_csrf", value=csrfToken)
                 button.btn(type="submit") Delete
     else
       h1 No Products
