--- a/views/layouts/navigation.pug
+++ b/views/layouts/navigation.pug
@@ -20,6 +20,7 @@ header.main-header
       if (isAuthenticated)
         li.main-header__item
           form(action="/logout", method="post")
+            input(type="hidden", name="_csrf", value=csrfToken)
             button(type="submit") Logout
       else
         li.main-header__item
@@ -44,6 +45,7 @@ nav.mobile-nav
         a(href="/admin/products", class=path === "/admin/products" ? "active" : "") Admin Products
       li.mobile-nav__item
         form(action="/logout", method="post")
+          input(type="hidden", name="_csrf", value=csrfToken)
           button(type="submit") Logout
     else
       li.mobile-nav__item
