--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -13,4 +13,5 @@ block content
       .form-control
         label(for="password") Password
         input#password(type="password", name="password")
+      input(type="hidden", name="_csrf", value=csrfToken)
       button.btn(type="submit") Login
