--- a/views/shop/cart.pug
+++ b/views/shop/cart.pug
@@ -12,10 +12,12 @@ block content
           li.cart__item #{ product.title } (#{ product.quantity }) - $#{ product.price * product.quantity }
             form(action="/cart-delete-product", method="post")
               input(type="hidden", name="productId", value=product._id)
+              input(type="hidden", name="_csrf", value=csrfToken)
               button.btn.danger(type="submit") Delete
       p.centered Total: $#{ totalPrice }
       .centered
         form(action="/create-order", method="post")
+          input(type="hidden", name="_csrf", value=csrfToken)
           button.btn(type="submit") Order Now
     else
       h1 No Products In Cart!
